Define logo height to avoid flickering

--- a/css/main.less
+++ b/css/main.less
@@ -35,7 +35,7 @@ a:visited {
     display: block;
     margin: 0 auto;
     text-transform: uppercase;
-    width: 80vmin;
+    height: 30vmin;
   }
 
   .info {
